<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:background="@color/default_btn_color_normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"/>

    <RelativeLayout
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abs_white"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"
            android:hint="@string/address_text_hint"
            android:padding="@dimen/padding_small_more"
            android:paddingEnd="@dimen/padding_50"
            android:paddingRight="@dimen/padding_50"
            android:completionHint="@string/address_history_auto_complete_hint"
            android:singleLine="true"
            android:textColor="@color/abs_black"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/clear_address_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@id/address_text"
            android:layout_alignRight="@id/address_text"
            android:layout_margin="@dimen/padding_small"
            android:src="@drawable/btn_clear" />

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_text"
            android:layout_marginTop="@dimen/padding_50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/free_submit_btn"
                style="@style/main_btn_style"
                android:layout_marginEnd="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_small"
                android:layout_weight="1"
                android:text="@string/free_btn_text" />

            <Button
                android:id="@+id/ad_submit_btn"
                style="@style/main_btn_style"
                android:layout_marginLeft="@dimen/padding_small"
                android:layout_marginStart="@dimen/padding_small"
                android:layout_weight="1"
                android:text="@string/ad_btn_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_container"
            android:layout_marginTop="@dimen/padding_60"
            android:text="@string/tip"
            android:textColor="@color/abs_white"
            android:textSize="@dimen/text_size_small_more" />

    </RelativeLayout>

</RelativeLayout>